# openim

./: .env.example  .gitignore  AGENTS.md  README.md  README_zh.md  docker-compose.yml  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  epic.yml  feature.yml
apps/server/: alembic.ini  pyproject.toml
apps/server/alembic/versions/: 0001_p0_schema.py
apps/server/app/: main.py
apps/server/app/api/: auth.py  bot_messages.py  bots.py  contacts.py  conversations.py  default_bot.py  deps.py  friends.py  users.py
apps/server/app/core/: config.py  errors.py  response.py  security.py
apps/server/app/db/: runtime_schema.py  session.py
apps/server/app/models/: __init__.py  bot.py  conversation.py  friendship.py  message.py  user.py
apps/server/app/schemas/: common.py
apps/server/app/services/: bot_gateway_sessions.py  bots.py  conversations.py  default_bot.py  messages.py  pending_actions.py
apps/server/app/ws/: bot_gateway.py  employee.py
apps/server/tests/: conftest.py  test_p0_flow.py
apps/web/: index.html  package.json
docs/: architecture.md  backend-plan.md  frontend-plan.md  overall-plan.md  plugin-npm-package.md  tasks.md  v1.md  v2.md  workflow.md
docs/engineering/: README.md  REQ-employee-friendship-chat-technical-design.md
docs/product/: README.md
docs/tests/: 2026-05-26-workflow-smoke-test.md  REQ-0024-chat-workspace-ui-test-report.md  REQ-0031-message-reading-copy-test-report.md  (+1 more)
scripts/: e2e-openclaw-local.mjs  e2e-p0-plugin.mjs  e2e-p0.mjs  e2e-p05.mjs  openclaw-local-bridge.mjs
(+35 files in other folders)
