[project]
name = "openim-server"
version = "0.1.0"
description = "OpenIM FastAPI server for OpenClaw BOT onboarding"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "base58>=2.1.1",
  "bcrypt>=4.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "pydantic-settings>=2.5.2",
  "pyjwt>=2.9.0",
  "pymysql>=1.1.1",
  "redis>=5.1.0",
  "sqlalchemy>=2.0.35",
  "ulid-py>=1.1.0",
  "uvicorn[standard]>=0.30.6"
]

[dependency-groups]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
